--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,14 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    text-align: center;
+    color: #2e2f42;
+}
+
 ul, ol {
     list-style-type: none;
     margin: 0;
@@ -51,32 +59,20 @@ ul, ol {
     margin: 0 auto;
 }
 
+.section {
+    padding: 120px 0;
+}
+
 /*header*/
 .page-header {
     background-color: #ffffff;
     border-bottom: 1px solid #e7e9fc;
+    padding: 24px 0;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-}
-
-.header-nav {
-    display: flex;
-    align-items: center;
-}
-
-.nav-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
-
-.contacts-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
 }
 
 .logo {
@@ -90,7 +86,6 @@ ul, ol {
 }
 
 .header-logo {
-    padding: 24px 0;
     margin-right: 76px;
 }
 
@@ -98,11 +93,22 @@ ul, ol {
     color: #2e2f42;
 }
 
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
 .menu-nav {
     display: block;
     font-weight: 500;
     color: #2e2f42;
-    padding: 24px 0;
+    width: calc((100%-80px/3));
 }
 
 .menu-nav:hover {
@@ -111,6 +117,12 @@ ul, ol {
 
 .menu-nav:focus {
     color: #404bbf;
+}
+
+.contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .contacts {
@@ -122,7 +134,7 @@ ul, ol {
 .mail-tel {
     color: #434455;
     display: block;
-    padding: 24px 0;
+    width: calc((100%-40px/2));
 }
 
 .mail-tel:hover {
@@ -134,10 +146,10 @@ ul, ol {
 }
 
 /*main*/
-  /*team section*/
+  /*first section. hero.*/
 .first-section {
     background-color: #2e2f42;
-    padding-bottom: 188px;
+    padding: 188px 0;
 }
 
 .slogan {
@@ -147,11 +159,7 @@ ul, ol {
     text-align: center;
     color: #ffffff;
     letter-spacing: 0.02em;
-    padding-top: 188px;
     margin-bottom: 48px;
-    width: max-content;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .order-button {
@@ -165,8 +173,7 @@ ul, ol {
     background-color: #4d5ae5;
     cursor: pointer;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 .order-button:hover {
@@ -177,12 +184,22 @@ ul, ol {
     background-color: #404BBF;
 }
 
-h2 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11111;
-    text-align: center;
-    color: #2e2f42;
+ /*second section. advantages.*/
+.advantages {
+    background-color: #FFFFFF;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .adv-title {
@@ -191,6 +208,13 @@ h2 {
     line-height: 1.2;
     color: #2e2f42;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+
+.advantages-list {
+    display: flex;
+    gap: 24px;
+    align-items: center;
 }
 
 .adv-text {
@@ -200,8 +224,19 @@ h2 {
     color: #434455;
 }
 
+.advantages-li {
+    width: calc((100%-72px/4));
+}
+
+ /*third section. team.*/
 .team {
     background-color: #f4f4fd;
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
+    align-items: center;
 }
 
 .team-title {
@@ -211,10 +246,18 @@ h2 {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.team-img {
+    margin-bottom: 32px;
 }
 
 .team-card {
     background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    width: calc((100%-72px/4));
 }
 
 .names {
@@ -223,6 +266,9 @@ h2 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    width: max-content;
+    margin: 0 auto;
+    margin-bottom: 8px;
 }
 
 .work {
@@ -230,9 +276,17 @@ h2 {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    width: max-content;
+    margin: 0 auto;
+    margin-bottom: 32px;
 }
 
   /*portfolio section*/
+
+.portfolio {
+    background-color: #FFFFFF;
+}
+
 .portfolio-title {
     font-size: 36px;
     line-height: 1.11;
@@ -240,6 +294,15 @@ h2 {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color:#2e2f42;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 
 .examples-names {
@@ -248,6 +311,7 @@ h2 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding-top: 32px;
 }
 
 .type-of-examples {
@@ -255,21 +319,27 @@ h2 {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-top: 8px;
+    padding-bottom: 32px;
+}
+
+.portfolio-content {
+    padding-left: 16px;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
 }
 
   /*footer*/
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
+    align-items: center;
 }
 
-.logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
+.footer-logo {
+    display: block;
+    margin-bottom: 16px;
 }
 
 .footer-text {
