--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,10 @@ ul, ol {
     column-gap: 24px;
 }
 
+.portfolio-list-elements {
+    width: calc((100%-48px/3));
+}
+
 .examples-names {
     font-weight: 500;
     font-size: 20px;
