--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@ ul, ol {
     display: block;
     font-weight: 500;
     color: #2e2f42;
+    padding: 24px 0;
     width: calc((100%-80px/3));
 }
 
@@ -159,6 +160,8 @@ ul, ol {
     text-align: center;
     color: #ffffff;
     letter-spacing: 0.02em;
+    max-width: 496px;
+    margin: 0 auto;
     margin-bottom: 48px;
 }
 
@@ -174,6 +177,10 @@ ul, ol {
     cursor: pointer;
     display: block;
     margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 
 .order-button:hover {
@@ -249,8 +256,8 @@ ul, ol {
     margin-bottom: 72px;
 }
 
-.team-img {
-    margin-bottom: 32px;
+.name-and-job-container {
+    padding: 32px 0;
 }
 
 .team-card {
@@ -269,6 +276,7 @@ ul, ol {
     width: max-content;
     margin: 0 auto;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .work {
@@ -278,7 +286,7 @@ ul, ol {
     color: #434455;
     width: max-content;
     margin: 0 auto;
-    margin-bottom: 32px;
+    text-align: center;
 }
 
   /*portfolio section*/
@@ -306,7 +314,7 @@ ul, ol {
 }
 
 .portfolio-list-elements {
-    width: calc((100%-48px/3));
+    width: calc((100% - 48px) / 3);
 }
 
 .examples-names {
@@ -315,7 +323,7 @@ ul, ol {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-top: 32px;
+    margin-bottom: 8px;
 }
 
 .type-of-examples {
@@ -324,14 +332,13 @@ ul, ol {
     letter-spacing: 0.02em;
     color: #434455;
     padding-top: 8px;
-    padding-bottom: 32px;
 }
 
 .portfolio-content {
-    padding-left: 16px;
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
 }
 
   /*footer*/
@@ -344,6 +351,7 @@ ul, ol {
 .footer-logo {
     display: block;
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .footer-text {
